# Cardano-Developer-Studio

./: .gitattributes  .gitignore  .gitmodules  README.md  SUMMARY.md  depeloverStudio.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cardano-smart-contracts-examples/: README.md  cabal.project
cardano-smart-contracts-examples/.devcontainer/scripts/: on-create-container.sh
cardano-smart-contracts-examples/Helpers/: Helpers.cabal
cardano-smart-contracts-examples/Helpers/src/Helpers/: Deploy.hs  OffChain.hs  OffChainEval.hs  OnChain.hs  Types.hs
cardano-smart-contracts-examples/Helpers/test/: HelpersTest.hs
cardano-smart-contracts-examples/Policies/AlwaysFalse/: AlwaysFalsePolicy.cabal
cardano-smart-contracts-examples/Policies/AlwaysFalse/app/: deploy.hs
cardano-smart-contracts-examples/Policies/AlwaysFalse/scripts/: cli.sh
cardano-smart-contracts-examples/Policies/AlwaysFalse/src/: AlwaysFalsePolicy.hs
cardano-smart-contracts-examples/Policies/AlwaysTrue/: AlwaysTruePolicy.cabal
cardano-smart-contracts-examples/Policies/CheckDate/: CheckDatePolicy.cabal  README.md
cardano-smart-contracts-examples/Policies/CheckSignature/: CheckSignaturePolicy.cabal
cardano-smart-contracts-examples/Policies/RedeemerFT/: RedeemerFtPolicy.cabal
cardano-smart-contracts-examples/Policies/RedeemerNFT/: README.md  RedeemerNftPolicy.cabal
cardano-smart-contracts-examples/Policies/RedeemerNFT/deno-lucid/: minting.ts
cardano-smart-contracts-examples/Policies/RedeemerNFT/scripts/: cli.sh
cardano-smart-contracts-examples/Policies/RedeemerNFT/src/: RedeemerNftPolicy.hs
cardano-smart-contracts-examples/Validators/AlwaysFalse/: AlwaysFalseValidator.cabal  README.md
cardano-smart-contracts-examples/Validators/AlwaysTrue/: AlwaysTrueValidator.cabal
cardano-smart-contracts-examples/Validators/CheckDate/: CheckDateValidator.cabal
cardano-smart-contracts-examples/Validators/CheckSignature/: CheckSignatureValidator.cabal  README.md
cardano-web3-frontend-template/: .babelrc  Dockerfile  LICENSE  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
cardano-web3-frontend-template/.github/workflows/: cd.yml  ci.yml  docker-image-git.yml
cardano-web3-frontend-template/__tests__/: hello.test.ts
cardano-web3-frontend-template/src/components/: AlwaysContract.tsx  CheckDateContract.tsx  CheckSignatureContract.tsx  FTPolicy.tsx  NFTPolicy.tsx
cardano-web3-frontend-template/src/pages/: _app.tsx  index.tsx
cardano-web3-frontend-template/src/utilities/: utilities.ts
configs/cardano-node/preprod/: config.json  config.json:Zone.Identifier
configs/cardano-node/preprod3/: protocol-parameters.json
configs/cardano-node/preprod9.0.0/: protocol-parameters.json
configs/cardano-node/preview3/: config.json
configs/cardano-wallet/: cardano-wallet-API.json
docker-compose/base/: docker-compose.base.yml
docker-compose/cardano-dbsync/: docker-compose.dbsync.yml
docker-compose/cardano-node/: .env  docker-compose.node.yml
docker-compose/cardano-wallet/: .env  docker-compose-wallet.yml  docker-compose.wallet.yml
docker-compose/ogmios-kupo/: docker-compose.ogmios.kupo.yml
docker-enviroments/cardano-dbsync/: docker-compose.dbsync.yml
docker-enviroments/cardano-dev/: Dockerfile  docker-compose.dev.yml
docker-enviroments/cardano-development/: Dockerfile  docker-compose.development.yml
docker-enviroments/cardano-node/: docker-compose.node.yml
docker-enviroments/cardano-wallet/: docker-compose.wallet.yml
docs/: README_CONTAINERS.md  README_CONTRIBUTION.md  README_DOCKER.md  README_DOCUMENTATION.md  README_FEATURES.md  README_INCLUDED.md  README_INSTALLATION.md  README_SCRIPT.md  README_VSCODE.md
examples/: .gitignore  README.md  cabal.project  cardano-dev.code-workspace
examples/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
examples/.devcontainer/scripts/: on-start-container.sh
examples/Helpers/: Helpers.cabal
examples/Helpers/src/Helpers/: CLI.hs  Constants.hs  Deploy.hs  Emulator.hs  OffChain.hs  OffChainEval.hs  OnChain.hs  Types.hs
examples/Helpers/test/: HelpersTest.hs
examples/Off-chain/: .env  .env.example  README.md  next.config.js  package.json
examples/Off-chain/frontend/: README.md
examples/Policies/AlwaysFalse/: AlwaysFalsePolicy.cabal  README.md
examples/Policies/AlwaysTrue/: AlwaysTruePolicy.cabal  README.md
examples/Policies/CheckDate/: CheckDatePolicy.cabal
examples/Policies/CheckSignature/: CheckSignaturePolicy.cabal
examples/Policies/RedeemerFT/: README.md  RedeemerFtPolicy.cabal
examples/Policies/RedeemerFT/app/: deploy.hs
examples/Policies/RedeemerFT/scripts/: cli.sh
examples/Policies/RedeemerNFT/: RedeemerNftPolicy.cabal
examples/Policys/CheckSignature/: CheckSignaturePolicy.cabal  README.md  checkSignaturePolicy.cabal
examples/Policys/CheckSignature/app/: deploy.hs
examples/Policys/CheckSignature/scripts/: cli.sh
examples/Policys/CheckSignature/src/: DatumCheckSignatureValidator.hs  ParamCheckSignaturePolicy.hs  ParamCheckSignatureValidator.hs
examples/Policys/CheckSignature/test/: CheckSignaturePolicyTest.hs
examples/Policys/Free/: FreePolicy.cabal  README.md  freePolicy.cabal  freeValidator.cabal
examples/Policys/Free/scripts/: cli.sh
examples/Policys/Free/src/: FreePolicy.hs
examples/Policys/Free/test/: FreePolicyTest.hs
examples/Policys/Lock/: README.md  (+2 more)
examples/Validators/AllwaysFalse/: AllwaysFalseValidator.cabal  README.md
examples/Validators/AllwaysFalse/app/: deploy.hs
examples/Validators/AllwaysFalse/scripts/: cli.sh
examples/Validators/AllwaysFalse/src/: AllwaysFalseValidator.hs
examples/Validators/AllwaysFalse/test/: AllwaysFalseValidatorTest.hs
scripts/: .env.cardano  compose.sh  init-cardano-node.sh  init-cardano-wallet.sh  run.sh  utils-cardano-dbsync.sh  utils-cardano-node.sh  utils-cardano-wallet.sh  utils.sh
scripts/init/: init-cardano-node.sh  init-cardano-wallet.sh  init-kupo.sh  init-ogmios.sh
scripts/menu-compose/: compose.sh
scripts/utils/: utils-transactions.sh  utils.sh
(+150 files in other folders)
