cabal-version:      3.4
name:               RedeemerFtPolicy
version:            0.1.0.0
author:             Francisco Ciordia Cantarella
maintainer:         francisco.ciordia.cantarella@gmail.com
build-type:         Simple
copyright:          © 2024 Francisco Ciordia Cantarella 
license:            Apache-2.0

common common-all

    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , plutonomy
                    , serialise
    build-depends:      cardano-helpers
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors

common common-all-tests
    import:           common-all
    build-depends:    QuickCheck
                    , tasty
                    , tasty-hunit
                    , plutus-simple-model
                    , plutus-ledger

library
    import:             common-all
    hs-source-dirs:     src
    exposed-modules:    RedeemerFtPolicy

test-suite RedeemerFtPolicyTest
    import:             common-all-tests
    type:               exitcode-stdio-1.0
    main-is:            RedeemerFtPolicyTest.hs
    hs-source-dirs:     test
    build-depends:      RedeemerFtPolicy

executable RedeemerFtPolicyDeploy
  import:         common-all
  main-is:        deploy.hs
  hs-source-dirs: app
  build-depends:  RedeemerFtPolicy
  build-depends:  time, playground-common, openapi3, plutus-ledger, filepath, directory, plutus-ledger, process
