cabal-version:      3.4
name:               CheckSignaturePolicy
version:            0.1.0.0
author:             Francisco Ciordia Cantarella
build-type:         Simple

common common-all

    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , plutonomy
                    , serialise
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors

common common-all-tests
    import:           common-all
    build-depends:    QuickCheck
                    , tasty
                    , plutus-simple-model

library
    import:             common-all
    hs-source-dirs:     src
    exposed-modules:    ParamCheckSignaturePolicy

test-suite CheckSignaturePolicyTest
    import:             common-all-tests
    type:               exitcode-stdio-1.0
    main-is:            CheckSignaturePolicyTest.hs
    hs-source-dirs:     test
    build-depends:      CheckSignaturePolicy
