cabal-version:      3.4
name:               AllwaysFalseValidator
version:            0.1.0.0
author:             Francisco Ciordia Cantarella
maintainer:         francisco.ciordia.cantarella@gmail.com
build-type:         Simple
copyright:          © 2024 Francisco Ciordia Cantarella 
license:            Apache-2.0

common common-all

    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , plutonomy
                    , serialise
    build-depends:    cardano-helpers
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors

common common-all-tests
    import:           common-all
    build-depends:    QuickCheck
                    , tasty
                    , plutus-simple-model

library
    import:             common-all
    hs-source-dirs:     src
    exposed-modules:    AllwaysFalseValidator

test-suite AllwaysFalseValidatorTest
    import:             common-all-tests
    type:               exitcode-stdio-1.0
    main-is:            AllwaysFalseValidatorTest.hs
    hs-source-dirs:     test
    build-depends:      AllwaysFalseValidator
   
executable AllwaysFalseValidatorDeploy
  import:         common-all
  main-is:        deploy.hs
  hs-source-dirs: app
  build-depends:  AllwaysFalseValidator
  build-depends:  time, playground-common, openapi3, plutus-ledger, filepath, directory, plutus-ledger, process
